chart UI and n spt chart update

--- a/apps/templates/pages/project/details.html
+++ b/apps/templates/pages/project/details.html
@@ -179,46 +179,46 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-    <div class="card">
-      <div class="card-body ">
+    <div class="card resizable-content">
+      <div class="card-body">
         <div class="input-group no-border">
           <button class="btn btn-primary" id="drawChart-first-apply"><i class="material-icons">draw</i> Draw</button>
         </div>
-        <div id="drawChart-first"></div>
+        <div id="drawChart-first" style="width:100%; height: 90%;"></div>
 
       </div>
     </div>
   </div>
   <div class="col-md-6">
-    <div class="card">
+    <div class="card resizable-content">
       <div class="card-body ">
         <div class="input-group no-border">
           <button class="btn btn-primary" id="drawChart-second-apply"><i class="material-icons">draw</i> Draw</button>
         </div>
-        <div id="drawChart-second"></div>
+        <div id="drawChart-second" style="width:100%; height: 90%;"></div>
       </div>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-md-6">
-    <div class="card">
+    <div class="card resizable-content">
       <div class="card-body ">
         <div class="input-group no-border">
           <button class="btn btn-primary" id="drawChart-third-apply"><i class="material-icons">draw</i> Draw</button>
         </div>
-        <div id="drawChart-third"></div>
+        <div id="drawChart-third" style="width:100%; height: 90%;"></div>
 
       </div>
     </div>
   </div>
   <div class="col-md-6">
-    <div class="card">
+    <div class="card resizable-content">
       <div class="card-body ">
         <div class="input-group no-border">
           <button class="btn btn-primary" id="drawChart-fourth-apply"><i class="material-icons">draw</i> Draw</button>
         </div>
-        <div id="drawChart-fourth"></div>
+        <div id="drawChart-fourth" style="width:100%; height: 90%;"></div>
       </div>
     </div>
   </div>
