--- a/apps/static/custom/css/style.css
+++ b/apps/static/custom/css/style.css
@@ -6,6 +6,7 @@
 .highcharts-figure,
 .highcharts-data-table table {
   min-width: 360px;
+  min-height: 460px;
   max-width: 800px;
   margin: 1em auto;
 }
@@ -80,3 +81,21 @@
   margin-right: 8px;
   opacity: 0.7;
 }
+
+.resizable-content {
+  min-width: 100%;
+  resize: both;
+  overflow: auto;
+  max-height: fit-content;
+  max-width: fit-content;
+}
+
+.chart-wrapper {
+  position: relative;
+     padding-bottom: 40%;
+ }
+ 
+ .chart-inner {
+ position: absolute;
+     width: 100%; height: 100%;
+ }
