--- a/apps/templates/pages/project/details.html
+++ b/apps/templates/pages/project/details.html
@@ -323,10 +323,15 @@
     };
     $.get("{% url 'ajax-chart-project' %}", dataRequest).done(function (data) {
       var data = data.chart_data;
-      console.log(chartDiv)
-      var arranged_data = genericScatterPlotData(data)
       yaxis = v1.split("Vs")[0];
-      genericScatterPlot(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, yaxis, 'Elevation (MSL)',)
+      if(v1=='Particle Size'){
+        var arranged_data = genericlineData(data)
+        genericLineChart(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, yaxis, v2)
+      }
+      else{
+        var arranged_data = genericScatterPlotData(data)
+        genericScatterPlot(arranged_data, chartDiv, v1 + " vs " + v2, "Derived from " + ags_text, yaxis, 'Elevation (MSL)',)
+      }
     });
   };
 
