update for machine type and log

--- a/apps/templates/pages/project/details.html
+++ b/apps/templates/pages/project/details.html
@@ -74,7 +74,8 @@
                 <th>LOCA_ID</th>
                 <th>Longitude</th>
                 <th>Latitude</th>
-                <th>LOCA_TYPE</th>
+                <th>LOCA_GL</th>
+                <th>MOND_RDNG</th>
               </tr>
             </thead>
             <tbody>
@@ -95,7 +96,8 @@
                 <td>{{ hole.LOCA_ID }}</td>
                 <td>{{ hole.longitude }}</td>
                 <td>{{ hole.latitude }}</td>
-                <td>{{ hole.LOCA_TYPE }}</td>
+                <td>{{ hole.LOCA_GL }}</td>
+                <td>{{ hole.MOND_RDNG }}</td>
               </tr>
               {% endfor %}
             </tbody>
