--- a/apps/static/custom/css/style.css
+++ b/apps/static/custom/css/style.css
@@ -99,3 +99,7 @@
  position: absolute;
      width: 100%; height: 100%;
  }
+
+.form-group input[type=file]::file-upload-button{
+  background-color: red;
+}
