--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -37,7 +37,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label class="bmd-label-floating">Username</label>
+                  <!-- <label class="bmd-label-floating">Username</label> -->
                   {{ form.username }}
                 </div>
               </div>
@@ -48,7 +48,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label class="bmd-label-floating">Password</label>
+                  <!-- <label class="bmd-label-floating">Password</label> -->
                   {{ form.password }}
                 </div>
               </div>
