--- a/apps/templates/layouts/base-login.html
+++ b/apps/templates/layouts/base-login.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      {% include 'includes/footer.html' %}
+      <!-- {% include 'includes/footer.html' %} -->
 
     </div>
   </div>
