--- a/apps/templates/pages/contact/delete.html
+++ b/apps/templates/pages/contact/delete.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="card-footer ml-auto mr-auto">
                         <button type="submit" class="btn btn-rose" style="margin-right:5px;">Delete</button>
-                        <a class="btn btn-success" onclick='window.location.href="{% url 'contact' %}"' style="color:#ffffff ;">Cancel</a>
+                        <a class="btn btn-rose" onclick='window.location.href="{% url 'contact' %}"' style="color:#ffffff ;">Cancel</a>
                     </div>
 
                 </div>
