--- a/apps/templates/pages/project/agcform.html
+++ b/apps/templates/pages/project/agcform.html
@@ -136,7 +136,7 @@
                                     Sample One
                                 </td>
                                 <td>
-                                    <button class="btn btn-success">Download</button>
+                                    <button class="btn btn-rose">Download</button>
                                 </td>
                             </tr>
                             <tr>
@@ -144,7 +144,7 @@
                                     Sample Two
                                 </td>
                                 <td>
-                                    <button class="btn btn-success">Download</button>
+                                    <button class="btn btn-rose">Download</button>
                                 </td>
                             </tr>
                             <tr>
@@ -152,7 +152,7 @@
                                     Sample Two
                                 </td>
                                 <td>
-                                    <button class="btn btn-success">Download</button>
+                                    <button class="btn btn-rose">Download</button>
                                 </td>
                             </tr>
                             <tr>
@@ -160,7 +160,7 @@
                                     Sample Two
                                 </td>
                                 <td>
-                                    <button class="btn btn-success">Download</button>
+                                    <button class="btn btn-rose">Download</button>
                                 </td>
                             </tr>
                         </tbody>
