--- a/apps/templates/pages/project/form.html
+++ b/apps/templates/pages/project/form.html
@@ -50,7 +50,7 @@
                         {% endfor %}
                     </div>
                     <div class="card-footer ml-auto mr-auto">
-                        <button type="submit" class="btn">Submit</button>
+                        <button type="submit" class="btn btn-rose">Submit</button>
                     </div>
                 </div>
             </form>
