--- a/apps/templates/pages/user/delete.html
+++ b/apps/templates/pages/user/delete.html
@@ -55,8 +55,8 @@
                         <h4 class="card-title">Are you sure? Do you want to delete?</h4>
                     </div>
                     <div class="card-footer ml-auto mr-auto">
-                        <button type="submit" class="btn btn-rose">Delete</button>
-                        <a class="btn btn-success" onclick='window.location.href="{% url 'user_list' %}"' style="color:#ffffff ;">Cancel</a>
+                        <button type="submit" class="btn btn-rose" style="margin-right:5px;">Delete</button>
+                        <a class="btn btn-rose" onclick='window.location.href="{% url 'user_list' %}"' style="color:#ffffff ;">Cancel</a>
                     </div>
 
                 </div>
