--- a/apps/templates/pages/user/profile.html
+++ b/apps/templates/pages/user/profile.html
@@ -44,7 +44,7 @@
                       {% endfor %}
                   </div>
                   <div class="card-footer ml-auto mr-auto">
-                      <button type="submit" class="btn">Submit</button>
+                      <button type="submit" class="btn btn-rose">Submit</button>
                   </div>
               </div>
           </form>
