--- a/apps/static/custom/css/style.css
+++ b/apps/static/custom/css/style.css
@@ -144,11 +144,18 @@
   position: absolute;
   right: 2%;
 }
-}
 
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+label.col-md-3.col-form-label {
+  color: black;
+}
+
+label#name-error {
+  color: #342229;
 }
